--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,27 @@
 
 .top-nav {
     background-color:#ffffff;
-    border-style: solid;
-    border-width: 1px;
+    border-width: 5px;
+    height: 80px;
     border-color: #cccccc;
+    z-index: 1;
+    padding: 10px;
 }
 
 #nav-logo{
-background-color: #4aaaa5;
-color: white;
-float: left;
-padding: 5px;
+    background-color: #4aaaa5;
+    height: 60px;
+    color: white;
+    float: left;
+    padding: 5px;
+    margin: 0px 0px 0px 200px;
 }
 
 #nav-links{
-float: right;
-padding: 5px;
-overflow: auto;
+    float: left;
+    padding: 5px;
+    overflow: auto;
+    margin: 0px 0px 0px 550px;
 }
 
 
@@ -27,15 +32,17 @@ overflow: auto;
 
 .about-container {
     background-color: #ffffff;
+    height: 350px;
     border-style: solid;
     border-width: 1px;
     border-color: #dddddd;
     width: 960px;
     margin: 70px 0px 0px 200px;
+    padding: 10px;
 }
 
 #about-title{
-
+    border-bottom: black;
 }
 
 #about-content {
@@ -51,9 +58,17 @@ h1 {
 
 p {
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    float: left;
+    text-align: left;
 }
 
 img {
     float:left;
     margin: 0px 10px 10px 0px;
 }
+
+body {
+    background-image: url("https://media1.thehungryjpeg.com/thumbs2/ori_35897_df44dc35b3248342bbc0e2aa82151597b515be1e_colorful-memphis-patterns-seamless.jpg");
+    background-size: cover;
+}
+
