--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,22 @@
 /* Top Navigation Section */
 
+* {
+    box-sizing:border-box;
+
+}
 
 .top-nav {
     background-color:#ffffff;
-    border-width: 5px;
-    height: 80px;
-    border-color: #cccccc;
-    z-index: 1;
-    padding: 10px;
+    height: 90px;
+    border: 5px #cccccc;
+    width: 100%;
+    padding: 50px;
 }
 
 #nav-logo{
     background-color: #4aaaa5;
-    height: 60px;
+    height: 90px;
+    width: 250px;
     color: white;
     float: left;
     padding: 5px;
@@ -41,14 +45,26 @@
     padding: 10px;
 }
 
-#about-title{
-    border-bottom: black;
+#about-title {
+    color:#4aaaa5;
 }
 
 #about-content {
 
 }
 
+footer {
+    background-color: #666666;
+    border-width: 5px;
+    height: 80px;
+    width: 100%;
+    border-color: #cccccc;
+    z-index: 1;
+    padding: 10px;
+    text-align: center;
+    float: left;
+    margin: top 40px;
+}
 
 /* Text & Image */
 
@@ -68,7 +84,6 @@ img {
 }
 
 body {
-    background-image: url("https://media1.thehungryjpeg.com/thumbs2/ori_35897_df44dc35b3248342bbc0e2aa82151597b515be1e_colorful-memphis-patterns-seamless.jpg");
-    background-size: cover;
+    background-color: blueviolet;
 }
 
